# rft

./: Cargo.toml  README.md  log4rs.yaml  request.http
crates/rft-api/: Cargo.toml  request.http
crates/rft-api/src/: main.rs
crates/rft-api/src/user/: entity.rs  error.rs  handler.rs  mod.rs  repository.rs  service.rs
crates/rft-async/: Cargo.toml
crates/rft-async/src/: async_await.rs  main.rs
crates/rft-basic/: Cargo.toml
crates/rft-basic/src/: control_flow.rs  data_type.rs  formatting.rs  main.rs  variable.rs
crates/rft-collection/: Cargo.toml
crates/rft-collection/src/: hash_map.rs  main.rs  strings.rs  vector.rs
crates/rft-database/: Cargo.toml  request.http
crates/rft-database/migrations/: 20260509051003_create_users_table.sql
crates/rft-database/src/: database.rs  main.rs
crates/rft-database/src/user/: entity.rs  error.rs  handler.rs  mod.rs  repository.rs  service.rs
crates/rft-error/: Cargo.toml
crates/rft-error-handling/: Cargo.toml
crates/rft-error-handling/src/: main.rs  panic.rs  result.rs
crates/rft-error/src/: anyhow.rs  main.rs  thiserror.rs
crates/rft-final/: Cargo.toml
crates/rft-final/migrations/: 20260512134909_create_users_table.sql
crates/rft-final/src/: app.rs  main.rs
crates/rft-final/src/common/: config.rs
crates/rft-final/src/core/: app.rs  config.rs  mod.rs  routing.rs  state.rs  tracing.rs
crates/rft-final/src/domain/shared/: db.rs  dto.rs  error.rs  mod.rs
crates/rft-final/src/domain/user/: dto.rs  error.rs  handler.rs  mod.rs  model.rs  repository.rs  service.rs
crates/rft-final/src/infra/: db.rs  mod.rs  tracing.rs
crates/rft-logging/: Cargo.toml
crates/rft-logging/src/: complex_logger.rs  main.rs  simple_logger.rs
crates/rft-mini-project/: Cargo.toml
crates/rft-mini-project/src/: application.rs  entities.rs  main.rs  services.rs
crates/rft-ownership/: Cargo.toml
crates/rft-ownership/src/: borrowing.rs  main.rs  ownership.rs
crates/rft-project-structure/: Cargo.toml
crates/rft-project-structure/src/: main.rs
crates/rft-project-structure/src/entities/: hobby.rs  mod.rs  user.rs
crates/rft-struct-and-enum/: Cargo.toml
crates/rft-web/: Cargo.toml
crates/rft-web/src/: handler.rs  main.rs
crates/struct-and-enum/: Cargo.toml
crates/struct-and-enum/src/: enums.rs  main.rs  structs.rs
