[workspace]
resolver = "3"
members = [
    "crates/rft-api", "crates/rft-async",
    "crates/rft-basic",
    "crates/rft-collection", "crates/rft-database", "crates/rft-error",
    "crates/rft-error-handling",
    "crates/rft-mini-project",
    "crates/rft-ownership",
    "crates/rft-project-structure",
    "crates/rft-struct-and-enum",
    "crates/rft-web",
]
