[package]
name = "rft-final"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "v7", "serde"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["full"] }
tracing = "0.1.42"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
config = "0.15.22"
chrono = { version = "0.4.44", features = ["serde"] }
axum-extra = { version = "0.12.6", features = ["query", "with-rejection"] }
