[package]
name = "rft-logging"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
env_logger = "0.11.10"
log = "0.4.29"
log4rs = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["full"] }
tracing-log = "0.2.0"
tracing-subscriber = "0.3.23"
